styles/main.css
/* ... */
h1 .name {
  display: block;
  margin: 0 0 25px;
  font: 0.35714em / 1 Nothing You Could Do, cursive;
  letter-spacing: 2px;
  text-transform: none;
}

h1 b {
  font-weight: normal;
}

h2 {
  margin: 0 0 30px;
  font: 4.28571em / 1.2 loveloline_bold;
  letter-spacing: 10px;
  text-transform: uppercase;
}

h2 a {
  text-decoration: none;
  color: currentColor;
}

h3 {
  margin: 0 0 30px;
  font: 1.78571em / 1.1 Nothing You Could Do, cursive;
}

h3 a {
  text-decoration: none;
  color: currentColor;
}

h4 {
  color: blue;
  margin: 0 0 10px;
  font-size: 24px;
  font-weight: 800;
  font-style: italic;
  letter-spacing: 2px;
  text-transform: uppercase;
  border: 1px solid;
  border-radius: 20%;
}

p,
ul,
ol,
address {
  margin: 0 0 30px;
  font-style: normal;
  line-height: 1.5;
  opacity: 0.7;
}

ol,
ul {
  padding: 0 0 0 30px;
}

ol li,
ul li {
  padding: 0 0 5px;
}

a {
  color: #FB544D;
  transition: 0.3s;
}

a:hover {
  text-decoration: none;
}

a .fa {
  margin: 0 5px 0 0;
}

blockquote {
  margin: 0 0 30px;
  padding: 30px 100px;
  border: 4px double;
  border-left: none;
  border-right: none;
  text-align: center;
}

blockquote p {
  margin-bottom: 15px;
  font-style: italic;
}

blockquote .author {
  margin: 0 0 20px;
  font-weight: bold;
  font-size: 1em;
  letter-spacing: 1px;
  text-transform: uppercase;
}

figure {
  margin: 0;
}

figure img {
  max-width: 100%;
  height: auto;
}

label {
  font-style: italic;
  font-size: 1em;
  letter-spacing: 1px;
  text-transform: uppercase;
}

form p {
  opacity: 1;
}

input[type="text"],
input[type="password"],
input[type="email"],
textarea {
  position: relative;
  width: 100%;
  margin: 0;
  padding: 10px;
  background: transparent;
  border: none;
  border-bottom: 4px double currentColor;
  box-sizing: border-box;
  border-radius: 0;
  font: 1em / 1 Roboto Mono, serif;
  color: currentColor;
  transition: 0.3s;
  outline: none;
}

textarea {
  resize: none;
}

select {
  width: 100%;
  padding: 10px;
  border: 4px double;
}

hr {
  margin: 50px 0;
  background: none;
  border: none;
  border-bottom: 4px double;
  color: #000;
}

.section-bg-dark hr,
.section-bg-overlay hr,
.section-bg-img-dark hr {
  color: #ffffff;
}

.section-bg-light hr {
  color: #000000;
}

.content-box-dark hr {
  color: #ffffff;
}

.content-box-light hr {
  color: #000000;
}

sup {
  vertical-align: top;
  line-height: 1;
}

.fa .fa-4x .fa-hand-peace-o{
   color: blue;
}
table {
  width: 100%;
  border: 4px double;
}

table th,
table td {
  padding: 10px;
  text-align: left;
  border: 1px solid;
}

a.alignleft,
a.alignright {
  position: relative;
  z-index: 5;
}

.no-margin {
  margin: 0 !important;
}

.no-padding {
  padding: 0 !important;
}

.no-padding .section-inner {
  padding: 0 !important;
}

.container {
  position: relative;
  width: 940px;
  margin: auto;
  z-index: 10;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.row > .col {
  border: 0px solid transparent;
  float: left;
  box-sizing: border-box;
  background-clip: padding-box !important;
  margin-left: 3%;
}

.row .col:first-child {
  margin-left: 0;
}

.row .span_1 {
  width: 5.5833333333%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_2 {
  width: 14.1666666667%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_3 {
  width: 22.75%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_4 {
  width: 31.3333333333%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_5 {
  width: 39.9166666667%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_6 {
  width: 48.5%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_7 {
  width: 57.0833333333%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_8 {
  width: 65.6666666667%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_9 {
  width: 74.25%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_10 {
  width: 82.8333333333%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_11 {
  width: 91.4166666667%;
  border-left-width: 0;
  padding: 0 0%;
  margin-left: 3%;
}

.row .span_12 {
  margin-left: 0;
  width: 100%;
}

.section {
  position: relative;
}

.section .section-inner {
  overflow: hidden;
  padding-top: 150px;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-size: cover;
  background-color: #fff;
}

[class*="section-bg"] .section-inner,
.section:last-child .section-inner {
  padding-bottom: 150px;
}

.section + [class*="section-bg"] {
  margin-top: 150px;
}

[class*="section-bg"] + [class*="section-bg"] {
  margin-top: 0;
}

.section-top-rise,
.section-top-fall,
.section-bottom-rise,
.section-bottom-fall {
  z-index: 10;
}

.section-top-rise:before, .section-top-rise:after,
.section-top-fall:before,
.section-top-fall:after,
.section-bottom-rise:before,
.section-bottom-rise:after,
.section-bottom-fall:before,
.section-bottom-fall:after {
  content: '';
  display: none;
  position: absolute;
  left: 0;
  width: 100%;
  height: 150px;
  z-index: 5;
}

.section-top-rise:before,
.lte-ie9 .section-top-rise .before,
.section-top-fall:before,
.lte-ie9
.section-top-fall .before,
.section-bottom-rise:before,
.lte-ie9
.section-bottom-rise .before,
.section-bottom-fall:before,
.lte-ie9
.section-bottom-fall .before {
  top: -150px;
}

.section-top-rise:after,
.lte-ie9 .section-top-rise .after,
.section-top-fall:after,
.lte-ie9
.section-top-fall .after,
.section-bottom-rise:after,
.lte-ie9
.section-bottom-rise .after,
.section-bottom-fall:after,
.lte-ie9
.section-bottom-fall .after {
  bottom: -150px;
}
/* ... */

